Fixed bug with carousel image frames on mobile. Fixed bug with scrolling issue on iOS Safari. Fixed formatting issue for inline images on writeup page on mobile.

--- a/resources/writeups/md-style.css
+++ b/resources/writeups/md-style.css
@@ -46,12 +46,8 @@ details > details {
 .code-snippet > a {
     position: relative;
     display: block;
-    color: lightgray;
+    color: transparent;
     select:none;
-}
-
-.code-snippet:not(.no-link) > a:hover {
-    color: lightblue;
 }
 
 .code-snippet > a:focus {
@@ -84,25 +80,29 @@ details > details {
     .image-container {
         float: none;
         text-align: center;
-        margin-left: 0; 
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
-
 .inline-left, .inline-right {
+    display: block;
     width: 300px;
     margin-top: 0.2em;
     margin-bottom: 0;
 }
 
-.inline-left {
-    margin-right: 1em;
-    margin-left: 1px;
-}
+@media (min-width: 600px) {
 
-.inline-right {
-    margin-left: 1em;
-    margin-right: 1px;
+    .inline-left {
+        margin-right: 1em;
+        margin-left: 1px;
+    }
+
+    .inline-right {
+        margin-left: 1em;
+        margin-right: 1px;
+    }
 }
 
 .banner, details img, .video {
