--- a/style.css
+++ b/style.css
@@ -605,23 +605,21 @@ fieldset[disabled] .btn-success.active {
 }
 .carousel-element {
   display: inline-block;
-  height: 325px;
-  aspect-ratio: 433 / 325;
   min-width: 433px;
+  height: 325px;
   overflow: hidden;
-  margin-right: -1px
 }
 .carousel-element > img {
-  width: 100%;
-  height: 100%;
+  width: 433px;
+  height: 325px;
   object-fit: cover;
 }
 .carousel-element::before {
   content: "";
   position: absolute;
   transform:translateX(-217px);
-  width: 100%;
-  height: 100%;
+  width: 433px;
+  height: 325px;
   background: url('resources/carousel/Overlay.png') left/contain no-repeat;
 }
 
